--- a/package.json
+++ b/package.json
@@ -7,14 +7,26 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/marked": "^6.0.0",
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.6.8",
+    "ckeditor5": "^41.4.2",
+    "ckeditor5-custom-build": "file:ckeditor5",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.1.7",
+    "http-proxy-middleware": "^3.0.0",
+    "marked": "^12.0.2",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "tailwind": "^4.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
