--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "ckeditor5-custom-build": "file:ckeditor5",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
-    "http-proxy-middleware": "^3.0.0",
     "marked": "^12.0.2",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
@@ -32,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch-build": "nodemon"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
